--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,3 +11,14 @@ services:
       - ./data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+  app:
+    build: .
+    restart: always
+    environment:
+      POSTGRES_HOST: postgres
+      POSTGRES_PORT: 5432
+    ports:
+      - "3000:3000"
+    depends_on:
+      - postgres
+    
