Try redis client

--- a/.github/workflows/postgres-service.yml
+++ b/.github/workflows/postgres-service.yml
@@ -3,7 +3,7 @@ name: Postgres Service Example
 on:
   push:
     branches:
-      - main
+      - postgres
   pull_request:
     branches:
       - main
