--- a/.github/workflows/redis-service.yml
+++ b/.github/workflows/redis-service.yml
@@ -19,7 +19,12 @@ jobs:
         image: redis
         ports:
           - 6379:6379
-        options: --entrypoint redis-server
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        # options: --entrypoint redis-server
 
     steps:
       - uses: actions/checkout@v3
