--- a/.github/workflows/puppeteer.yml
+++ b/.github/workflows/puppeteer.yml
@@ -1,9 +1,9 @@
-name: Redis Service Example
+name: Puppeteer Service Example
 
 on:
   push:
     branches:
-      - redis
+      - main
   pull_request:
     branches:
       - main
@@ -14,29 +14,29 @@ jobs:
   vm-job:
     runs-on: ubuntu-latest
 
-    services:
-      redis:
-        image: redis
-        ports:
-          - 6379:6379
-        options: >-
-          --health-cmd "redis-cli ping"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        # options: --entrypoint redis-server
+    # services:
+    #   redis:
+    #     image: redis
+    #     ports:
+    #       - 6379:6379
+    #     options: >-
+    #       --health-cmd "redis-cli ping"
+    #       --health-interval 10s
+    #       --health-timeout 5s
+    #       --health-retries 5
+    # options: --entrypoint redis-server
 
     steps:
       - uses: actions/checkout@v3
       - run: npm ci
-      - run: npm run redis
-        env:
-          REDIS_URL: redis://localhost
-          # REDIS_HOST: localhost
-          # REDIS_PORT: ${{ job.services.redis.ports[6379] }}
-          # use localhost for the host here because we are running the job on the VM.
-          # If we were running the job on in a container this would be postgres
-          # POSTGRES_PORT: ${{ job.services.postgres.ports[5432] }} # get randomly assigned published port
+      - run: npm start
+        # env:
+        #   REDIS_URL: redis://localhost
+        # REDIS_HOST: localhost
+        # REDIS_PORT: ${{ job.services.redis.ports[6379] }}
+        # use localhost for the host here because we are running the job on the VM.
+        # If we were running the job on in a container this would be postgres
+        # POSTGRES_PORT: ${{ job.services.postgres.ports[5432] }} # get randomly assigned published port
 
   # docker-job:
   #   runs-on: ubuntu-latest
